--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>권용준 Portpolio</title>
   </head>
   <body>
+    <a href="dayelim.github.io">임다예 박사 업적 홈페이지</
   </body>
 </html>
