--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>권용준 Portpolio</title>
   </head>
   <body>
-    <a href="dayelim.github.io">임다예 박사 업적 홈페이지</
+    <a href="https://dayelim.github.io">임다예 박사 업적 홈페이지</
   </body>
 </html>
