--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>권용준 Portpolio</title>
   </head>
   <body>
-    <a href="https://dayelim.github.io">1. 임다예 박사 업적 홈페이지</a>
+    <a href="https://dayelim.github.io">1. 임다예 박사 업적 홈페이지 github를 사용하여 구현</a>
+    <a href="http://ec2-52-79-199-231.ap-northeast-2.compute.amazonaws.com/">2. 스프링부트와 AWS로 혼자 구현하는 웹 서비스 책 완독 후 구현</a>
   </body>
 </html>
